finalização da parte de internacionalizacao do sistema

--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -5,3 +5,5 @@ menu.componentes=Components
 menu.validacao_hibernate=Hibernate Validator
 menu.crud_ajax=Ajax CRUD
 cabecalho.titulo=Course JSF2
+crud.sucesso.salvar=Success on save
+crud.sucesso.excluir=Success on remove
