--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -5,3 +5,5 @@ menu.componentes=Componentes
 menu.validacao_hibernate=Validação Hibernate
 menu.crud_ajax=Crud AJAX
 cabecalho.titulo=Curso JSF2
+crud.sucesso.salvar=Sucesso ao salvar
+crud.sucesso.excluir=Sucesso ao excluir
