tela crudAjax completa internazionalizada

--- a/src/messages_en_US.properties
+++ b/src/messages_en_US.properties
@@ -7,3 +7,11 @@ menu.crud_ajax=Ajax CRUD
 cabecalho.titulo=Course JSF2
 crud.sucesso.salvar=Success on save
 crud.sucesso.excluir=Success on remove
+crud.tabela.botao.novo=New
+crud.coluna.nome=NAME
+crud.coluna.alterar=Change
+crud.coluna.excluir=Delete
+crud.grid.editar=People Editing
+crud.grid.salvar=Save
+crud.grid.cancelar=Cancel
+crud.grid.nome=Name
