--- a/src/messages_pt_BR.properties
+++ b/src/messages_pt_BR.properties
@@ -7,3 +7,11 @@ menu.crud_ajax=Crud AJAX
 cabecalho.titulo=Curso JSF2
 crud.sucesso.salvar=Sucesso ao salvar
 crud.sucesso.excluir=Sucesso ao excluir
+crud.tabela.botao.novo=Novo
+crud.coluna.nome=NOME
+crud.coluna.alterar=Alterar
+crud.coluna.excluir=Excluir
+crud.grid.editar=Edição de Pessoas
+crud.grid.salvar=Salvar
+crud.grid.cancelar=Cancelar
+crud.grid.nome=Nome
